--- a/Index.html
+++ b/Index.html
@@ -1,4 +1,4 @@
-﻿<!doctype html>
+﻿ <!doctype html>
 <html>
 <head>
 <meta charset="utf-8">
@@ -31,5 +31,19 @@
 
 	    </p>
 	    
+	    </div>
+  <div class="Botoes">
+  	<ur>
+  	<li><a href="index.html" class="active">Portifolio</a></li>
+  	<li><a href="index.html" class="active">Projetos </a></li>
+  	<li><a href="index.html" class="active">Contato</a></li>
+  	</ur>
+  </div>
+	  <img src="file:///C|/Users/Guilherme M de Souza/Desktop/Nova pasta/Imagens/12779094_846132608845818_5000168956106039630_o.jpg" width="1224" height="1224" alt=""/>
+
+	    
+	  </body>
+</html>
+
 	  </body>
 </html>
